# Product-Review-Scrapper

./: README.md
backend/: .gitignore  ReviewModel.py  analyzer.py  auth.py  google_sheets.py  main.py  processor.py  pyproject.toml  scrapper.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/scrape/: route.ts
frontend/src/components/: ReviewTable.tsx
